# xtr

./: .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  LICENSE.md  README.md  compiler_flags.cmake
.run/: all.run.xml  xtr.run.xml  xtr_static.run.xml  xtrtest.run.xml  xtrtest_static.run.xml
inc/: xtr.h
src/: xtr.c  xtr.h  xtr_base64.c  xtr_clone.c  xtr_cmp.c  xtr_compare.c  xtr_decrease.c  xtr_from.c  xtr_get.c  xtr_hex.c  xtr_increase.c  xtr_internal.h  xtr_new.c  xtr_random.c  xtr_resize.c  xtr_reverse.c  xtr_search.c  xtr_split.c  xtr_unarycmp.c  xtr_unicode.c  xtr_utils.c
toolsupport/: compiler_flags.cmake
tst/: xtrtest.h  xtrtest_clone.c  xtrtest_clone_with_capacity.c  xtrtest_free.c  xtrtest_from_str.c  xtrtest_from_str_repeated.c  xtrtest_from_str_repeated_with_capacity.c  xtrtest_from_str_with_capacity.c  xtrtest_getters.c  xtrtest_is_empty.c  xtrtest_is_spaces.c  xtrtest_main.c  xtrtest_malloc.c  xtrtest_new.c  xtrtest_new_clone.c  xtrtest_new_empty.c  xtrtest_new_ensure.c  xtrtest_new_from.c  xtrtest_new_from_c.c  xtrtest_new_from_c_ensure.c  xtrtest_new_from_ensure.c  xtrtest_new_with_capacity.c  xtrtest_zeros.c
tst/atto/: README.md
tst/framework/: xtrtest.h  xtrtest.h.head  xtrtest.h.tail  xtrtest_main.c  xtrtest_main.c.head  xtrtest_main.c.tail  xtrtest_malloc.c  xtrtestautogen.sh
tst/framework/atto/: atto.c
